2004-05-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinFont.c (FindSubFontForChar): corrections to dkf patch
	to handle subFontPtrPtr in EnumFontFamilies callback.

2004-05-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/tkWinFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make sure
	that the lastSubFontPtr remains valid even when the subfont array
	is reallocated. [Bug 618872]

2004-05-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixButton.c (TkpDrawCheckIndicator): allow radiobuttons
	to be drawn when disabledforeground and/or selectcolor are NULL.
	[Bug #826850] (griffin)

	* win/tkWinMenu.c, unix/tkUnixMenu.c (DrawMenuEntryLabel): place
	images of compound menu entries in indicator space if not a radio
	of checkbutton. [Bug #756952] (eserte)

	* win/tkWinX.c:                fix drawing of unicode chars in menu
	* win/tkWinInt.h (TkWinProcs): titles. [Bug #904371] (riefenstahl)
	* win/tkWinMenu.c (ReconfigureWindowsMenu):

	* generic/tkClipboard.c:   Move TkClipCleanup from tkClipboard.c
	* macosx/tkMacOSXXStubs.c: to being implemented in a platform
	* unix/tkUnixEvent.c:      specific manner.  The cleanup order was
	* win/tkWinX.c:            bad at least on Windows, where we
	reset/cleared display info that was still needed for the clipboard
	to render. [Bug #939389, #822002, #732662]

	* library/panedwindow.tcl (MarkSash): call DragSash to stop sash
	jump when B1 is pressed and released without moving. [Bug #932155]

	* tests/panedwindow.test: panedwindow-25.1
	* generic/tkPanedWindow.c (Unlink): clean up -before/-after refs
	to a slave when removing it. [Bug #928413] (griffin)

	* generic/tkImgPhoto.c (ImgPhotoConfigureMaster): force -data into
	ByteArray and -format into String to correctly handle them if they
	have been shimmered or created as some other object type.

2004-04-24  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkPort.h:
	* unix/Makefile.in:
	* win/makefile.bc: 